--- a/git.html
+++ b/git.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
+        <header>
+            <h1>Discover hidden places in the world around you</h1>
+            <p>Download Excursion (Coming soon!)
+        </header>
     </body>
 </html>
