--- a/git.html
+++ b/git.html
@@ -6,7 +6,12 @@
     <body>
         <header>
             <h1>Discover hidden places in the world around you</h1>
-            <p>Download Excursion (Coming soon!)
+            <a><p>Download Excursion (Coming soon!)</p></a>
         </header>
+        <div class="phone>
+        </div>
+            <h2>Your Personal travel guide</h2>
+            <h4>Excursion remembers places you like, and recommends new points of interest around you.</h4>
+        <div class="tent>
     </body>
 </html>
